--- a/house_price_eda.ipynb
+++ b/house_price_eda.ipynb
@@ -1258,6 +1258,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MoSold', 'YrSold', 'SaleType', 'SaleCondition']"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars_leaky"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
