update on both notebooks

--- a/house_price_model.ipynb
+++ b/house_price_model.ipynb
@@ -882,6 +882,8 @@
     "\n",
     "It appears that this house should have a pretty low price ~200000, in spite of its quality and size measures, if my understanding on how leaderboard scores are calculated is correct.\n",
     "\n",
+    "However, it should be noted that I removed two outliers from the training set that are quite similar to this outlier in the test set. If I included those two outliers, the score will likely be less affected by this outlier although it might lower the model accuracy in general.\n",
+    "\n",
     "Some findings related to this:\n",
     "\n",
     "- I found that tree-based models tend to predict lower values than linear models for this outlier. This makes it hard to really say which models are better for this dataset solely from the leaderboard score. Cross-validation scores from the training set might be a better choice for evaluating models.\n",
